# zerolog

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cpp  cpu_only.cpp
examples/: basic_usage.cpp
include/zerolog/: logger.hpp
src/: logger.cpp
