cmake_minimum_required(VERSION 3.15)
project(zerolog VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-O3 -march=native -mtune=native -ffunction-sections -fdata-sections)
    if(CMAKE_BUILD_TYPE STREQUAL "Release")
        add_compile_options(-flto -fno-fat-lto-objects)
        add_link_options(-Wl,--gc-sections)
    endif()
endif()
find_package(Threads REQUIRED)
find_package(fmt REQUIRED)
add_library(zerolog STATIC src/logger.cpp)
target_include_directories(zerolog PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)
target_link_libraries(zerolog PUBLIC Threads::Threads fmt::fmt)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(zerolog PRIVATE -mtls-dialect=gnu2)
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(zerolog PRIVATE -flto=thin)
endif()
find_package(benchmark QUIET)
if(benchmark_FOUND)
    add_executable(zerolog_benchmark benchmarks/benchmark.cpp)
    target_link_libraries(zerolog_benchmark zerolog benchmark::benchmark)
    find_package(spdlog QUIET)
    if(spdlog_FOUND)
        target_compile_definitions(zerolog_benchmark PRIVATE HAS_SPDLOG)
        target_link_libraries(zerolog_benchmark spdlog::spdlog)
    endif()
else()
    message(STATUS "Google Benchmark not found - skipping benchmarks")
endif()
add_executable(zerolog_example examples/basic_usage.cpp)
target_link_libraries(zerolog_example zerolog)
enable_testing()
add_test(NAME zerolog_example COMMAND zerolog_example)
install(TARGETS zerolog EXPORT zerolog-targets ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
install(DIRECTORY include/zerolog DESTINATION include)
install(EXPORT zerolog-targets FILE zerolog-targets.cmake NAMESPACE zerolog:: DESTINATION lib/cmake/zerolog)

# CPU-only benchmark
if(benchmark_FOUND)
    add_executable(zerolog_cpu_only benchmarks/cpu_only.cpp)
    target_link_libraries(zerolog_cpu_only zerolog benchmark::benchmark)
endif()
